<resources>
    <string name="app_name">mobile</string>
    <string name="raspberry_p3">RASPBERRY P3</string>
    <string name="red_conectada">Red conectada:</string>
    <string name="bssid">BSSID:</string>
    <string name="empty">-</string>
    <string name="direcci_n_mac">DIRECCIÓN MAC:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="connect">CONNECT</string>
    <string name="cancel">Cancel</string>
</resources>
